upgpkg: arch-firefox-search 0.7-6     upd
git-svn-id: file:///srv/repos/svn-community/svn@10547 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=arch-firefox-search
 pkgver=0.7
-_ffver=3.5
-pkgrel=5
+_ffver=3.6
+pkgrel=6
 pkgdesc="Firefox Arch search engines (AUR, Pkgs, BBS, Wiki, etc.)"
-arch=(i686 x86_64)
+arch=(any)
 url="http://archlinux.org"
 license=('GPL')
 depends=(firefox)
@@ -48,3 +48,4 @@ build() {
     install -D -m 0644 aur.src          ${_prefix}/aur.src && \
     install -D -m 0644 aur.gif          ${_prefix}/aur.gif
 }
+
