--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=tangerine-icon-theme
 pkgver=0.26
-pkgrel=4
+pkgrel=5
 pkgdesc="Ubuntu's twist on the Tango icon theme"
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://launchpad.net/tangerine-icon-theme/"
 license=('custom:cc-by-sa-2.5')
 depends=('gnome-icon-theme')
