--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,5 @@
 # $Id$
-# Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Jaroslaw Swierczynski <swiergot@aur.archlinux.org>
 
 pkgname=cinelerra-cv
