--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer: Geoffroy Carrier <geoffroy@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+# Contributor: Geoffroy Carrier <geoffroy@archlinux.org>
 # Contributor: Roman Porizka <artee@beer.cz>
 
 pkgname=sqliteman
