--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,5 @@
-# $Id$
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Jaroslaw Swierczynski <swiergot@aur.archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=cinelerra-cv
 pkgver=20100121
@@ -41,10 +40,10 @@ build() {
   cd "$srcdir/$_gitname-build"
 
 
-  patch -Np1 -i $srcdir/cinelerra-libavutil50.patch || return 1
-  patch -Np1 -i $srcdir/cinelerra-pkgconfig-x264.patch || return 1
-  patch -Np1 -i $srcdir/cinelerra-x264.patch || return 1
-  patch -Np1 -i $srcdir/libpng14.patch || return 1
+  patch -Np1 -i ${srcdir}/cinelerra-libavutil50.patch || return 1
+  patch -Np1 -i ${srcdir}/cinelerra-pkgconfig-x264.patch || return 1
+  patch -Np1 -i ${srcdir}/cinelerra-x264.patch || return 1
+  patch -Np1 -i ${srcdir}/libpng14.patch || return 1
 
   # If you don't need OpenGL comment out the next line.
   sed -i '/\/X11R6/s///' configure.in
