--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,4 +1,3 @@
-# $Id$
 # Contributor: dibblethewrecker dibblethewrecker.at.jiwe.dot.org
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
@@ -14,8 +13,9 @@ source=(http://www.winterdrache.de/freeware/png2ico/data/$pkgname-src-2002-12-08
 md5sums=('9b663df81c826cd564638cba2e6bc75b')
 
 build() {
-  cd $srcdir/$pkgname
-  make || return 1
-  install -D -m755 png2ico $pkgdir/usr/bin/png2ico
-  install -D -m644 doc/png2ico.1 $pkgdir/usr/share/man/man1/png2ico.1
+	cd ${srcdir}/${pkgname}
+
+	make || return 1
+	install -D -m755 png2ico ${pkgdir}/usr/bin/png2ico
+	install -D -m644 doc/png2ico.1 ${pkgdir}/usr/share/man/man1/png2ico.1
 }
