Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10704 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -16,6 +16,11 @@ build() {
 	cd ${srcdir}/${pkgname}
 
 	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}
+
 	install -D -m755 png2ico ${pkgdir}/usr/bin/png2ico
 	install -D -m644 doc/png2ico.1 ${pkgdir}/usr/share/man/man1/png2ico.1
 }
