Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10706 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,6 @@
-# $Id$
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Geoffroy Carrier <geoffroy@archlinux.org>
 # Contributor: Roman Porizka <artee@beer.cz>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=sqliteman
 pkgver=1.2.1
@@ -16,8 +15,13 @@ source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz")
 md5sums=('98151419064e23e55504d8f20bb80f3f')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
-  cmake . -DCMAKE_INSTALL_PREFIX:PATH=/usr || return 1
-  make || return 1
-  make DESTDIR="$pkgdir" install || return 1
+	cd ${srcdir}/${pkgname}-${pkgver}
+	cmake . -DCMAKE_INSTALL_PREFIX:PATH=/usr || return 1
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+
+	make DESTDIR=${pkgdir} install || return 1
 }
