Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10721 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,6 @@
-# $Id$
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=ccrypt
 pkgver=1.9
@@ -11,12 +10,17 @@ arch=('i686' 'x86_64')
 url="http://ccrypt.sourceforge.net"
 license=('GPL2')
 depends=('glibc')
-source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('c3f78019d7a166dd66f1d4b1390c62c2')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  ./configure --prefix=/usr --mandir=/usr/share/man
-  make || return 1
-  make DESTDIR=$pkgdir install
+	cd ${srcdir}/${pkgname}-${pkgver}
+	./configure --prefix=/usr --mandir=/usr/share/man
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+
+	make DESTDIR=${pkgdir} install
 }
