Moved to arch any
git-svn-id: file:///srv/repos/svn-community/svn@10758 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=impressive
 pkgver=0.10.2
 pkgrel=1
 pkgdesc="A fancy PDF presentation program (previously known as KeyJNote)."
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://impressive.sourceforge.net"
 license=('GPL2')
 depends=('python-pygame' 'python-opengl' 'pil' 'xpdf')
