Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10763 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,6 @@
-# $Id$
-# Maintainer: Hugo Doria <hugodoria@gmail.com>
+# Contributor: Hugo Doria <hugodoria@gmail.com>
 # Contributor: priyank <priyankmg@gmail.com>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=obmenu
 pkgver=1.0
@@ -8,13 +8,17 @@ pkgrel=6
 pkgdesc="Openbox menu editor"
 arch=('i686' 'x86_64')
 url="http://obmenu.sourceforge.net/"
-depends=('python' 'pygtk' 'openbox')
 license=('GPL')
-source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
+depends=('python' 'pygtk' 'openbox')
+source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('710036a5edc9886d6d563ce46c747432')
 
 build() {
-  cd ${srcdir}/$pkgname-$pkgver
-  python setup.py install --root=${pkgdir} || return 1
+	/bin/true
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	python setup.py install --root=${pkgdir} || return 1
 }
  
