Moved to arch any
git-svn-id: file:///srv/repos/svn-community/svn@10765 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,18 +1,25 @@
-# Maintainer: Hugo Doria <hugodoria@gmail.com>
+# Contributor: Hugo Doria <hugodoria@gmail.com>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=openbox-themes
 pkgver=1.0.2
 pkgrel=1
 pkgdesc="Various themes for the Openbox window manager"
-arch=('i686' 'x86_64')
+arch=('any')
 url=http://www.debian.org
 license=('GPL')
 depends=(openbox)
-source=(http://ftp.debian.org/debian/pool/main/o/openbox-themes/openbox-themes_$pkgver.tar.gz)
+source=(http://ftp.debian.org/debian/pool/main/o/openbox-themes/openbox-themes_${pkgver}.tar.gz)
 md5sums=(b6ea4beb64d3a0c68e7c097e3c64885e)
 
 build() {
-  mkdir -p $startdir/pkg/usr/share/themes
-  rm -fr $startdir/src/$pkgname-$pkgver/debian
-  cp -R $startdir/src/$pkgname-$pkgver/* $startdir/pkg/usr/share/themes/
+	/bin/true
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+
+	mkdir -p ${pkgdir}/usr/share/themes
+	rm -fr debian
+	cp -R * ${pkgdir}/usr/share/themes/
 }
