--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,6 @@
-# $Id$
-# Maintainer: Allan McRae <allan@archlinux.org>
+# Contributor: Allan McRae <allan@archlinux.org>
 # Contributor: Marc poiroud <marci1 AT archlinux.fr>
+# Maintainer: Daniel J Griffiths <griffithsdj@archlinux.us>
 
 pkgname=qt-recordmydesktop
 pkgver=0.3.8
@@ -10,12 +10,16 @@ arch=('i686' 'x86_64')
 url="http://recordmydesktop.sourceforge.net"
 license=('GPL')
 depends=('recordmydesktop>=0.3.8.1' 'pyqt')
-source=(http://downloads.sourceforge.net/sourceforge/recordmydesktop/$pkgname-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/recordmydesktop/${pkgname}-${pkgver}.tar.gz)
 md5sums=('bf1525740755615ae172ae27fef68fb5')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  ./configure --prefix=/usr
-  make || return 1
-  make DESTDIR=$pkgdir install
+	cd ${srcdir}/${pkgname}-${pkgver}
+	./configure --prefix=/usr
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make DESTDIR=${pkgdir} install
 }
