Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10773 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,6 @@
-# $Id$
-# Maintainer: Alexander Fehr <pizzapunk gmail com>
+# Contributor: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Olivier Duclos <oliwer@free.fr>
+# Maintainer: Daniel J Griffiths <griffithsdj@archlinux.us>
 
 pkgname=volwheel
 pkgver=0.2.7
@@ -8,14 +8,18 @@ pkgrel=2
 pkgdesc="Tray icon to change volume with the mouse"
 arch=('i686' 'x86_64')
 url="http://oliwer.net/b/volwheel.html"
-license=('GPL3')
+license=('GPL')
 depends=('perl-gtk2-trayicon')
 optdepends=("alsa-utils: for ALSA support"
-	"oss: for OSS support")
-source=(http://olwtools.googlecode.com/files/$pkgname-$pkgver.tar.gz)
+	    "oss: for OSS support")
+source=(http://olwtools.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
 md5sums=('c57b3ffde4db2fafe63013194f167fe6')
 
 build() {
-  cd ${srcdir}/$pkgname-$pkgver
-  ./install.pl --prefix=/usr --destdir=${pkgdir} || return 1
+	/bin/true
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	./install.pl --prefix=/usr --destdir=${pkgdir} || return 1
 }
