--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,5 @@
-# $Id$
-# Maintainer: Jeff Mickey <jeff@archlinux.org>
+# Contributor: Jeff Mickey <jeff@archlinux.org>
+# Maintainer: Daniel J Griffiths <griffithsdj@archlinux.us>
 
 pkgname=wyrd
 pkgver=1.4.4
@@ -10,13 +10,18 @@ url="http://pessimization.com/software/wyrd/"
 license=('GPL')
 depends=('remind' 'ncurses')
 makedepends=('ocaml')
-source=(http://pessimization.com/software/wyrd/$pkgname-$pkgver.tar.gz)
+source=(http://pessimization.com/software/wyrd/${pkgname}-${pkgver}.tar.gz)
 md5sums=('a376c05ba614625da06082d850c742c7')
 
 build() {
-  cd ${srcdir}/$pkgname-$pkgver
+	cd ${srcdir}/${pkgname}-${pkgver}
 
-  ./configure --prefix=/usr --sysconfdir=/etc --enable-utf8
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
+	./configure --prefix=/usr --sysconfdir=/etc --enable-utf8
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+
+	make DESTDIR=${pkgdir} install || return 1
 }
