--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,6 @@
-# $Id$
-# Maintainer: Roman Kyrylych <roman@archlinux.org>
+# Contributor: Roman Kyrylych <roman@archlinux.org>
 # Contributor: cdhotfire <cdhotfire@gmail.com>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=rawstudio
 pkgver=1.2
@@ -11,15 +11,19 @@ license=('GPL')
 url="http://rawstudio.org/"
 depends=('gconf' 'libxml2' 'lcms' 'libjpeg' 'libtiff' 'desktop-file-utils' 'exiv2')
 install=rawstudio.install
-source=(http://rawstudio.org/files/release/$pkgname-$pkgver.tar.gz
+source=(http://rawstudio.org/files/release/${pkgname}-${pkgver}.tar.gz
 	rawstudio-const.patch)
-
-build() {
-  cd $srcdir/$pkgname-$pkgver
-  patch -Np1 -i $srcdir/rawstudio-const.patch || return 1
-  ./configure --prefix=/usr
-  make || return 1
-  make prefix=$pkgdir/usr install
-}
 md5sums=('25399cd80294fa44220a8940fc77689f'
          '6692b460e838ea56462aff7626b2dcef')
+
+build() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	patch -Np1 -i ${srcdir}/rawstudio-const.patch || return 1
+	./configure --prefix=/usr
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make prefix=${pkgdir}/usr install
+}
