upgpkg: sysprof 1.0.12-7     upd
git-svn-id: file:///srv/repos/svn-community/svn@10797 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,7 +11,6 @@ pkgdesc="A sampling CPU profiler that uses a Linux kernel module to profile the 
 arch=('i686' 'x86_64')
 url="http://www.daimi.au.dk/~sandmann/sysprof/"
 license=("GPL")
-depends=('libglade')
 source=(http://www.daimi.au.dk/~sandmann/$pkgname/$pkgname-$pkgver.tar.gz)
 md5sums=('9566040f3175678e75133b1c52a473f8')
 
@@ -31,6 +30,7 @@ build() {
 
 package_sysprof()
 {
+  depends=('libglade' 'kernel26-sysprof')
   cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR="$pkgdir" install || return 1
 }
