upgpkg: sysprof 1.0.12-7     upd
git-svn-id: file:///srv/repos/svn-community/svn@10799 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Previous Contributor: aeolist <aeolist@hotmail.com>
 
 pkgbase=sysprof
-pkgname=('sysprof' 'kernel26-sysprof')
+pkgname=('sysprof' 'sysprof-module')
 pkgver=1.0.12
 pkgrel=7
 pkgdesc="A sampling CPU profiler that uses a Linux kernel module to profile the entire system"
@@ -30,12 +30,12 @@ build() {
 
 package_sysprof()
 {
-  depends=('libglade' 'kernel26-sysprof')
+  depends=('libglade' 'sysprof-module')
   cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR="$pkgdir" install || return 1
 }
 
-package_kernel26-sysprof()
+package_sysprof-module()
 {
   _kernver=`pacman -Q kernel26 | cut -d . -f 3 | cut -f 1 -d -`
   depends=("kernel26>=2.6.${_kernver}" "kernel26<2.6.`expr ${_kernver} + 1`")
