upgpkg: phoronix-test-suite 2.4.0-1     upd
git-svn-id: file:///srv/repos/svn-community/svn@10811 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,6 +1,6 @@
 # Contributor: Andreas Schönfelder <passtschu at freenet dot de>
 pkgname=phoronix-test-suite
-pkgver=2.2.0
+pkgver=2.4.0
 pkgrel=1
 pkgdesc="The most comprehensive testing and benchmarking platform available for Linux"
 arch=('any')
@@ -10,16 +10,16 @@ depends=('php')
 optdepends=('php-gtk')
 install=(${pkgname}.install)
 source=(http://www.phoronix.net/downloads/phoronix-test-suite/releases/phoronix-test-suite-$pkgver.tar.gz)
-md5sums=('58d00a76021a55be5ca736f85b28b8e0')
+md5sums=('e18973dbfd8a242dbb15441b338ca025')
 
 build() {
   cd $startdir/src/phoronix-test-suite
 
   patch pts-core/library/pts-includes-install_dependencies.php <<EOF
-213c213
-< 			echo shell_exec("cd " . SCRIPT_DISTRO_DIR . " && sh install-" . \$distribution . "-packages.sh " . \$install_objects);
+233c233
+< 			echo shell_exec("cd " . STATIC_DIR . "distro-scripts/ && sh install-" . \$distribution . "-packages.sh " . \$install_objects);
 ---
-> 			echo shell_exec("cd " . SCRIPT_DISTRO_DIR . " && sh install-" . \$distribution . "-packages.sh --asdeps " . \$install_objects);
+> 			echo shell_exec("cd " . STATIC_DIR . "distro-scripts/ && sh install-" . \$distribution . "-packages.sh --asdeps " . \$install_objects);
 EOF
 
   install -d $startdir/pkg/usr/bin $startdir/pkg/usr/share/phoronix-test-suite
