--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,23 +1,28 @@
-# Maintainer: dibblethewrecker dibblethewrecker.at.jiwe.dot.org
+# Contributor: dibblethewrecker dibblethewrecker.at.jiwe.dot.org
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=g2sc
 pkgver=0.2
 pkgrel=3
 pkgdesc="Samba gtk2 client"
 arch=('i686' 'x86_64')
-license=('GPL')
 url="http://sourceforge.net/projects/g2sc"
+license=('GPL')
 depends=('smbclient' 'gtk2')
-source=(http://downloads.sourceforge.net/g2sc/$pkgver/g2cs${pkgver}alpha-source.tar.bz2)
+source=(http://downloads.sourceforge.net/g2sc/${pkgver}/g2cs${pkgver}alpha-source.tar.bz2)
 md5sums=('c0994584f2c950241bf7e2782cb4d2fd')
 
-build()
-{
-  cd $startdir/src
-  make || return 1 
-  mkdir -p $startdir/pkg/usr/{share/{g2sc,applications},bin}
-  install -m644 g2sc.conf $startdir/pkg/usr/share/g2sc || return 1
-  install -m644 g2sc.png $startdir/pkg/usr/share/g2sc || return 1
-  install -m755 g2sc $startdir/pkg/usr/bin || return 1
-  install -m644 g2sc.desktop $startdir/pkg/usr/share/applications || return 1
+build() {
+	cd ${srcdir}
+	make || return 1 
+}
+
+package() {
+	cd ${srcdir}
+
+	mkdir -p ${pkgdir}/usr/{share/{g2sc,applications},bin}
+	install -m644 g2sc.conf ${pkgdir}/usr/share/g2sc || return 1
+	install -m644 g2sc.png ${pkgdir}/usr/share/g2sc || return 1
+	install -m755 g2sc ${pkgdir}/usr/bin || return 1
+	install -m644 g2sc.desktop ${pkgdir}/usr/share/applications || return 1
 }
