--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,5 @@
-# $Id$
-# Maintainer: Jeff Mickey <j@codemac.net>
+# Contributor: Jeff Mickey <j@codemac.net>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=rexima
 pkgver=1.4
@@ -9,13 +9,17 @@ arch=('i686' 'x86_64')
 url="http://rus.members.beeb.net/rexima.html"
 license=('GPL')
 depends=('ncurses')
-source=(ftp://ftp.ibiblio.org/pub/Linux/apps/sound/mixers/$pkgname-$pkgver.tar.gz)
+source=(ftp://ftp.ibiblio.org/pub/Linux/apps/sound/mixers/${pkgname}-${pkgver}.tar.gz)
 md5sums=('333a4db26409b9cca9b9e96ddf42f44c')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
-  make || return 1
-  make PREFIX=$startdir/pkg/usr install
-  mv $pkgdir/usr/man $pkgdir/usr/share/
+	cd ${srcdir}/${pkgname}-${pkgver}
+	./configure --prefix=/usr
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make PREFIX=${pkgdir}/usr install
+	mv ${pkgdir}/usr/man ${pkgdir}/usr/share/
 }
