Move to splitpkg format
git-svn-id: file:///srv/repos/svn-community/svn@10843 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=1.4
 pkgrel=3
 pkgdesc="A curses-based interactive mixer."
 arch=('i686' 'x86_64')
-url="http://rus.members.beeb.net/rexima.html"
+url="http://www.svgalib.org/rus/rexima.html"
 license=('GPL')
 depends=('ncurses')
 source=(ftp://ftp.ibiblio.org/pub/Linux/apps/sound/mixers/${pkgname}-${pkgver}.tar.gz)
