--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,20 +1,24 @@
-# $Id$
 # Contributor: Jeff Mickey <jeff@archlinux.org>
 # Contributor: phrakture <aaronmgriffin -at- gmail.dot.com>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=windowlab
-pkgver=1.38
+pkgver=1.39
 pkgrel=1
 pkgdesc="A small and simple window manager."
 arch=('i686' 'x86_64')
-license=('GPL')
 url="http://www.nickgravgaard.com/windowlab"
-depends=('x-server' 'libxft')
-source=(http://www.nickgravgaard.com/windowlab/$pkgname-$pkgver.tar)
-md5sums=('87ab06650ea6e9cf4ec26ee7d21c743e')
+license=('GPL')
+depends=('xorg-server' 'libxft')
+source=(http://www.nickgravgaard.com/windowlab/${pkgname}-${pkgver}.tar)
+md5sums=('234fd201ade41eb0f1473b6a688e0911')
 
-build(){
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make PREFIX=/usr || return 1
-  make PREFIX=/usr CONFPREFIX="" MANDIR=${pkgdir}/usr/share/man DESTDIR=${pkgdir} install
+build() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make PREFIX=/usr || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make PREFIX=/usr CONFPREFIX="" MANDIR=${pkgdir}/usr/share/man DESTDIR=${pkgdir} install
 }
