upgpkg: dwm 5.7.2-2     upd
git-svn-id: file:///srv/repos/svn-community/svn@10861 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=dwm
 pkgver=5.7.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A dynamic window manager for X"
 url="http://dwm.suckless.org"
 arch=('i686' 'x86_64')
@@ -14,9 +14,11 @@ options=(zipman)
 depends=('libx11')
 install=dwm.install
 source=(http://code.suckless.org/dl/dwm/dwm-$pkgver.tar.gz \
-	config.h)
+	config.h
+	dwm.desktop)
 md5sums=('a0b8a799ddc5034dd8a818c9bd76f3a3'
-         'dc9b535baf445d1c12854d1a2a56449f')
+         'dc9b535baf445d1c12854d1a2a56449f'
+         '939f403a71b6e85261d09fc3412269ee')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
@@ -27,5 +29,6 @@ build() {
   make PREFIX=/usr DESTDIR=$pkgdir install || return 1
 
   install -m644 -D LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE && \
-  install -m644 -D README $pkgdir/usr/share/doc/$pkgname/README
+  install -m644 -D README $pkgdir/usr/share/doc/$pkgname/README && \
+  install -m644 -D $srcdir/dwm.desktop $pkgdir//etc/X11/sessions/dwm.desktop
 }
