--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,20 +2,18 @@
 # Maintainer : Ionut Biru <ionut@archlinux.ro>
 # Contributor: Dieter Plaetinck <dieter@plaetinck.be>
 pkgbase=uzbl
-pkgname=('uzbl-core' 'uzbl-browser')
-pkgver=2010.01.05
+pkgname=('uzbl-core' 'uzbl-browser' 'uzbl-tabbed')
+pkgver=2010.02.02
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.uzbl.org"
 license=('GPL3')
 makedepends=('git' 'pkgconfig' 'libwebkit>=1.1.15.4')
-source=(uzbl-$pkgver.tar.gz::http://github.com/Dieterbe/uzbl/tarball/$pkgver
-	fix_build.patch)
-md5sums=('2574fc68a7a7693297d371ca58a4edb4'
-         'c01ce2b428dca345adb7032179f2dec0')
+source=(uzbl-$pkgver.tar.gz::http://github.com/Dieterbe/uzbl/tarball/$pkgver)
+md5sums=('70a5d47655d5ec11f68ff5b7a7bd68b5')
+
 build() {
     cd "$srcdir"/Dieterbe-uzbl-*
-    patch -Np0 -i "$srcdir/fix_build.patch"
     make || return 1
 }
 package_uzbl-core(){
@@ -35,5 +33,11 @@ package_uzbl-browser(){
    depends=("uzbl-core=$pkgver" 'socat>=1.7.1.1' 'zenity>=2.28.0' 'xclip>=0.12' 'dmenu>=4.0' 'python' 'perl')
    cd "$srcdir"/Dieterbe-uzbl-*
    make DESTDIR="$pkgdir" PREFIX=/usr  install-uzbl-browser || return 1
+}
+package_uzbl-tabbed(){
+   pkgdesc="Tabbing manager providing multiple uzbl-browser instances in 1 window"
+   depends=("uzbl-browser=$pkgver")
+   cd "$srcdir"/Dieterbe-uzbl-*
+   make DESTDIR="$pkgdir" PREFIX=/usr install-uzbl-tabbed || return 1
 }
 
