git-svn-id: file:///srv/repos/svn-community/svn@10896 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,19 +1,22 @@
-# $Id$
 # Contributor: dibblethewrecker <dibblethewrecker.at.jiwe.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=ico2xpm
-pkgver=1.1
+pkgver=1.2
 pkgrel=1
-pkgdesc="a utility which converts Windows icons into X pixmaps"
+pkgdesc="A utility which converts Windows icons into X pixmaps"
 arch=('i686' 'x86_64')
-url="http://freshmeat.net/projects/ixo2xpm/"
+url="http://ico2xpm.sourceforge.net/"
 license=('GPL')
-source=(http://freshmeat.net/redir/ixo2xpm/17942/url_tgz/$pkgname-$pkgver.tar.gz)
-md5sums=('ed58ea52c0b20796aa9b7ba3e4e241cb')
+source=(http://downloads.sourceforge.net/ico2xpm/1.2/ico2xpm-1_2-src.tar.gz)
+md5sums=('b3dbe027e2420ee33e57d67140f40896')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure
-  make || return 1
-  install -D -m755 $pkgname $startdir/pkg/usr/bin/$pkgname
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	install -Dm755 ${pkgname} ${pkgdir}/usr/bin/${pkgname}
 }
