upgpkg: torcs 1.3.1-4     upd
git-svn-id: file:///srv/repos/svn-community/svn@11024 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=torcs
 pkgver=1.3.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A 3D racing cars simulator using OpenGL"
 url="http://torcs.sourceforge.net"
 license=("GPL")
 arch=('i686' 'x86_64')
-depends=('freeglut' 'libpng' 'freealut' 'libxi' 'libxmu' 'libxrandr')
+depends=('freeglut' 'libpng' 'freealut' 'libxi' 'libxmu' 'libxrandr' 'torcs-data')
 makedepends=('plib')
 options=('!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2 \
@@ -27,7 +27,7 @@ build() {
 
 #  ./configure --prefix=/opt/torcs --x-includes=/usr/include --x-libraries=/usr/lib
   make || return 1
-  make DESTDIR=$startdir/pkg install datainstall || return 1
+  make DESTDIR=$startdir/pkg install || return 1
 
   install -D -m644 Ticon.png $startdir/pkg/usr/share/pixmaps/torcs.png && \
   install -D -m644 ../torcs.desktop $startdir/pkg/usr/share/applications/torcs.desktop && \
@@ -35,3 +35,4 @@ build() {
 
   find ${startdir}/pkg -type d -exec chmod 755 {} \;
 }
+
