git-svn-id: file:///srv/repos/svn-community/svn@11032 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -23,9 +23,9 @@ md5sums=('f3efd94fb52e9963e176bf441cdab7b3'
 build() {
   cd $startdir/src/$pkgname-$pkgver
 
-#  (cd src && patch -p1 <../../torcs-gcc.patch)
+  (cd src && patch -p1 <../../torcs-gcc.patch)
 
-#  ./configure --prefix=/opt/torcs --x-includes=/usr/include --x-libraries=/usr/lib
+  ./configure --prefix=/opt/torcs --x-includes=/usr/include --x-libraries=/usr/lib
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
