--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,10 +3,11 @@
 # Maintainer: JJDaNiMoTh <jjdanimoth@gmail.com>
 
 pkgname=sdlmame
-pkgver=0.136
+pkgver=0.136u2
+_basever=0136
 pkgrel=1
 pkgdesc="A port of the popular Multiple Arcade Machine Emulator using SDL with OpenGL support."
-url="http://rbelmont.mameworld.info/?page_id=163"
+url="http://mamedev.org/"
 license=('custom:MAME License')
 arch=('i686' 'x86_64')
 depends=('sdl>=1.2.11' 'libxinerama' 'gconf')
@@ -14,52 +15,67 @@ makedepends=('unzip' 'nasm' 'mesa')
 DLAGENTS=('http::/usr/bin/wget -U "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1.2) Gecko/20090804 Shiretoko/3.5.2" -c -t 3 --waitretry=3')
 options=('!makeflags' 'force')
 install=sdlmame.install
-source=(http://rbelmont.mameworld.info/${pkgname}${pkgver%.*}${pkgver#*.}.zip \
-	sdlmame.sh \
-	extras.tar.gz)
-md5sums=('3a83a5ba70b63298f4173558ccad1eba'
+source=("mame${_basever}s.zip::http://mamedev.org/downloader.php?&file=mame${_basever}s.zip"
+	"http://mamedev.org/updates/0136u1_diff.zip"
+	"http://mamedev.org/updates/0136u2_diff.zip"
+	"sdlmame.sh"
+	"extras.tar.gz")
+md5sums=('9ff9f3a475e3933bf3ad1f55f42bff88'
+         '1163f4cd10779aaeae4f2b6e9fc06f19'
+         'befe2cf9c79ec1819661141cf817a89e'
          '3119ccfa1e970eba4467df31208adaf0'
          '420b61240bf5ae11615ba7c6100ee00d')
 
 build() {
-  cd ${startdir}/src/${pkgname}${pkgver%.*}${pkgver#*.}
+  cd $srcdir/
 
-  sed -i 's/-Werror//' makefile || return 1
+  if [ $NOEXTRACT -eq 0 ]; then
+    unzip mame.zip
+    find . -type f -not -name uismall.png | xargs perl -pi -e 's/\r\n?/\n/g'
+    patch -p0 -E <0136u1.diff
+    patch -p0 -E <0136u2.diff
+    sed -i 's/-Werror//' makefile || return 1
+  fi
 
   # Modify the make options based on the user's architecture
   if [ "$CARCH" == "x86_64" ]; then
     echo "Compiling for AMD64..."
     make AMD64=1 PTR64=1 || return 1
+    make tools AMD64=1 PTR64=1 || return 1
   elif [ "$CARCH" == "i686" ]; then
     make I686=1 || return 1
+    make tools I686=1 || return 1
   else
     echo "Compiling for i386..."
     make PM=1 || return 1
+    make tools PM=1 || return 1
   fi
 
   # Install the sdlmame script
-  install -Dm755 ${startdir}/src/${pkgname}.sh ${startdir}/pkg/usr/bin/${pkgname} || return 1
+  install -Dm755 $srcdir/${pkgname}.sh $pkgdir/usr/bin/${pkgname} || return 1
 
   # Install the applications and the UI font in /usr/share
-  install -Dm755 mame* ${startdir}/pkg/usr/share/${pkgname}/${pkgname} && \
-  install -m755 chdman ${startdir}/pkg/usr/share/${pkgname}/chdman && \
-  install -m755 jedutil ${startdir}/pkg/usr/share/${pkgname}/jedutil && \
-#  install -m755 makemeta ${startdir}/pkg/usr/share/${pkgname}/makemeta && \
-  install -m755 regrep ${startdir}/pkg/usr/share/${pkgname}/regrep && \
-  install -m755 romcmp ${startdir}/pkg/usr/share/${pkgname}/romcmp && \
-  install -m755 runtest ${startdir}/pkg/usr/share/${pkgname}/runtest && \
-  install -m755 testkeys ${startdir}/pkg/usr/share/${pkgname}/testkeys && \
-  install -m755 src2html ${startdir}/pkg/usr/share/${pkgname}/src2html && \
-  install -m755 srcclean ${startdir}/pkg/usr/share/${pkgname}/srcclean && \
-  install -m755 ldverify ${startdir}/pkg/usr/share/${pkgname}/ldverify && \
-  install -m644 ui.bdf ${startdir}/pkg/usr/share/${pkgname}/ui.bdf || return 1
+  install -Dm755 mame $pkgdir/usr/share/${pkgname}/${pkgname} && \
+  install -m755 chdman $pkgdir/usr/share/${pkgname}/chdman && \
+  install -m755 jedutil $pkgdir/usr/share/${pkgname}/jedutil && \
+#  install -m755 makemeta $pkgdir/usr/share/${pkgname}/makemeta && \
+  install -m755 regrep $pkgdir/usr/share/${pkgname}/regrep && \
+  install -m755 romcmp $pkgdir/usr/share/${pkgname}/romcmp && \
+#  install -m755 runtest $pkgdir/usr/share/${pkgname}/runtest && \
+  install -m755 testkeys $pkgdir/usr/share/${pkgname}/testkeys && \
+  install -m755 src2html $pkgdir/usr/share/${pkgname}/src2html && \
+  install -m755 srcclean $pkgdir/usr/share/${pkgname}/srcclean && \
+  install -m755 ldverify $pkgdir/usr/share/${pkgname}/ldverify && \
+  install -m755 ldresample $pkgdir/usr/share/${pkgname}/ldresample || return 1
+#  install -m644 ui.bdf $pkgdir/usr/share/${pkgname}/ui.bdf || return 1
 
   # Install the extra bits
-  install -d ${startdir}/pkg/usr/share/${pkgname}/{artwork,ctrlr,keymaps} && \
-  install -m644 ${startdir}/src/artwork/* ${startdir}/pkg/usr/share/${pkgname}/artwork/ && \
-  install -m644 ${startdir}/src/ctrlr/* ${startdir}/pkg/usr/share/${pkgname}/ctrlr/ && \
-  install -m644 keymaps/* ${startdir}/pkg/usr/share/${pkgname}/keymaps/ || return 1
+  install -d $pkgdir/usr/share/${pkgname}/{artwork,ctrlr,keymaps} && \
+  install -m644 $srcdir/artwork/* $pkgdir/usr/share/${pkgname}/artwork/ && \
+  install -m644 $srcdir/ctrlr/* $pkgdir/usr/share/${pkgname}/ctrlr/ || return 1
+  install -m644 src/osd/sdl/keymaps/* $pkgdir/usr/share/${pkgname}/keymaps/ || return 1
 
   # Include the license
   install -Dm644 docs/license.txt $startdir/pkg/usr/share/licenses/${pkgname}/license.txt
 }
+
