upgpkg: sdlmame 0.136u2-1     upd
git-svn-id: file:///srv/repos/svn-community/svn@11064 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -55,7 +55,9 @@ build() {
   install -Dm755 $srcdir/${pkgname}.sh $pkgdir/usr/bin/${pkgname} || return 1
 
   # Install the applications and the UI font in /usr/share
-  install -Dm755 mame $pkgdir/usr/share/${pkgname}/${pkgname} && \
+  install -Dm755 mame $pkgdir/usr/share/${pkgname}/${pkgname} || \
+  install -Dm755 mame64 $pkgdir/usr/share/${pkgname}/${pkgname} || return 1
+
   install -m755 chdman $pkgdir/usr/share/${pkgname}/chdman && \
   install -m755 jedutil $pkgdir/usr/share/${pkgname}/jedutil && \
 #  install -m755 makemeta $pkgdir/usr/share/${pkgname}/makemeta && \
