upgpkg: bbdb 2.35-3     upd
git-svn-id: file:///srv/repos/svn-community/svn@11100 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname="bbdb"
 pkgver=2.35
-pkgrel=2
+pkgrel=3
 pkgdesc="A rolodex-like database for Emacs"
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://bbdb.sourceforge.net"
 license=('GPL')
 depends=('emacs')
@@ -15,12 +15,21 @@ source=("http://bbdb.sourceforge.net/$pkgname-$pkgver.tar.gz")
 md5sums=('5c4e7f2b2a6a8e25ff77351f533f3910')
 
 build() {
-  cd "$startdir/src/$pkgname-$pkgver"
+  cd "$srcdir/$pkgname-$pkgver"
 
   ./configure --prefix=/usr || return 1
-  make || return 1
-  mkdir -p $startdir/pkg/usr/share/emacs/site-lisp/bbdb
-  cp lisp/*.el{,c} $startdir/pkg/usr/share/emacs/site-lisp/bbdb
-}
+  make all || return 1
 
-# vim:set ts=2 sw=2 et:
+  emacsdir="$pkgdir/usr/share/emacs/site-lisp/bbdb"
+  mkdir -p "$emacsdir"
+  cp lisp/*.el lisp/*.elc "$emacsdir"
+
+  texdir="$pkgdir/usr/share/texmf-dist/tex/plain/bbdb"
+  mkdir -p "$texdir"
+  cp tex/*.tex "$texdir"
+
+  infodir="$pkgdir/usr/share/info"
+  mkdir -p "$infodir"
+  cp texinfo/bbdb.info "$infodir"
+  gzip "$infodir/bbdb.info"
+}
