--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,27 +3,29 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=autojump
-pkgver=5
+pkgver=8
 pkgrel=1
 pkgdesc="A faster way to navigate your filesystem from the command line"
-arch=(i686 x86_64)
+arch=('any')
 url="http://wiki.github.com/joelthelion/autojump"
 license=('GPL')
 depends=('bash' 'python')
 makedepends=('git')
-source=(http://ghost1227.com/files/archfiles/${pkgname}-v${pkgver}.tar.bz2 autojump.install)
-install=(autojump.install)
-md5sums=('d538ab72afa3bb717d3f20ff2767fe3d'
-         '05407ce7eeb4d9d69bae54c26dd57c1e')
+optdepends=('python: needed for jumpapplet')
+source=(http://github.com/joelthelion/autojump/tarball/release-v${pkgver})
+install=autojump.install
+md5sums=('44149cb16b0aab1a350189d95539bf6a')
 
 build() {
 	/bin/true
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-v${pkgver}
+	cd ${srcdir}/joelthelion-autojump-ea68448
+	install -Dm644 icon.png ${pkgdir}/usr/share/autojump/icon.png
+	install -Dm755 jumpapplet ${pkgdir}/usr/bin/jumpapplet
 	install -Dm755 autojump ${pkgdir}/usr/bin/autojump
+	install -Dm644 autojump.1 ${pkgdir}/usr/share/man/man1/autojump.1
 	install -Dm755 autojump.bash ${pkgdir}/etc/profile.d/autojump.bash
 	install -Dm755 autojump.sh ${pkgdir}/etc/profile.d/autojump.sh
-	install -Dm644 autojump.1 ${pkgdir}/usr/share/man/man1/autojump.1
 }
