upgpkg: gecko-mediaplayer 0.9.9-1     update to 0.9.9
git-svn-id: file:///srv/repos/svn-community/svn@11214 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=gecko-mediaplayer
-pkgver=0.9.8
-pkgrel=2
+pkgver=0.9.9
+pkgrel=1
 pkgdesc="Browser plugin that uses gnome-mplayer to play media in a web browser"
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/gecko-mediaplayer/"
@@ -12,18 +12,19 @@ license=('GPL')
 depends=("gnome-mplayer=${pkgver}" 'dbus-glib')
 makedepends=('xulrunner' 'pkgconfig')
 replaces=('mplayer-plugin')
-source=(http://gecko-mediaplayer.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
-md5sums=('4df009d21b1a95c35c9adfdb6fbc96fe')
+source=(http://gecko-mediaplayer.googlecode.com/files/${pkgname}-${pkgver}.tar.gz
+	fix_configure.patch)
+md5sums=('1833c83ee2bb226914aa078165d04ddd'
+         '294d1c797001ac568fcb3e8b5e262184')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
 
-	./configure --prefix=/usr --sysconfdir=/etc --disable-schemas-install --without-gconf \
-	GECKO_LIBS="-L/usr/lib/xulrunner-devel-1.9.1/lib -lxpcomglue_s -lxul -lxpcom -lplds4 -lplc4 -lnspr4 -lpthread -ldl" \
-	GECKO_CFLAGS="-fshort-wchar -I/usr/include/xulrunner-1.9.1/stable -I/usr/include/nspr" \
-	GECKO_XPIDL="/usr/lib/xulrunner-1.9.1/xpidl" \
-	GECKO_IDLDIR="/usr/share/idl/xulrunner-1.9.1/stable"
+	patch -Np1 -i ${srcdir}/fix_configure.patch || return 1
 
+	autoreconf -fi || retur 1
+
+	./configure --prefix=/usr --sysconfdir=/etc --without-gconf
 	make || return 1
 }
 
