upgpkg: hgsvn 0.1.8-1     updated hgsvn to v0.1.8
git-svn-id: file:///srv/repos/svn-community/svn@11221 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,18 +3,18 @@
 # Contributor: Mathieu Clabaut <mathieu.clabaut@gmail.com>
 
 pkgname=hgsvn
-pkgver=0.1.7
-pkgrel=2
+pkgver=0.1.8
+pkgrel=1
 pkgdesc='A set of scripts to work locally on Subversion checkouts using Mercurial'
 arch=('any')
 url='http://pypi.python.org/pypi/hgsvn/'
 license=('GPL')
 depends=('python' 'setuptools')
-source=("http://pypi.python.org/packages/source/h/hgsvn/$pkgname-$pkgver.tar.gz")
-md5sums=('aaa4ef4124ac388832cddc85c1866236')
+source=("http://bitbucket.org/andialbrecht/$pkgname/get/v$pkgver.tar.gz")
+md5sums=('9036969847e880b16195bc4aa69858e4')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
+  cd "$srcdir/$pkgname"
 
   python setup.py install --root="$pkgdir" || return 1
 }
