--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=flam3
 pkgver=2.7.18
-pkgrel=4
+pkgrel=5
 pkgdesc="Tools to create/display fractal flames: algorithmically generated images and animations"
 arch=('i686' 'x86_64')
 url="http://flam3.com/"
@@ -17,6 +17,7 @@ sha1sums=('e4b6420bc4c47f489903a0fedf66d39f5ada7aaa')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  sed -i 's|libpng12|libpng|g' flam3.pc.in
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
