--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 
 pkgname=libacpi
 pkgver=0.2
-pkgrel=2
+pkgrel=2.1
 pkgdesc="general purpose lib to gather ACPI data"
 arch=(i686 x86_64)
 url="http://www.ngolde.de/libacpi.html"
 license=('GPL')
 depends=()
 options=(!emptydirs)
-source=(http://www.ngolde.de/download/$pkgname-$pkgver.tar.gz)
+source=(http://www.ngolde.de/download/${pkgname}-${pkgver}.tar.gz)
 md5sums=('05b53dd7bead66dda35fec502b91066c')
 
 build() {
-  cd "$startdir/src/$pkgname-$pkgver"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
   make PREFIX=/usr || return 1
-  make PREFIX=/usr DESTDIR="$startdir/pkg" install
+  make PREFIX=/usr DESTDIR="${pkgdir}" install
 }
