--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,18 +5,18 @@
 
 pkgname=tcllib
 pkgver=1.11.1
-pkgrel=1
+pkgrel=1.1
 pkgdesc="Set of pure-Tcl extensions."
 arch=('i686' 'x86_64')
 url="http://tcllib.sourceforge.net/"
 license=('bsd')
 depends=('tcl')
-source=(http://downloads.sourceforge.net/sourceforge/tcllib/tcllib-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/tcllib/tcllib-${pkgver}.tar.gz)
 
 build(){
-	cd $startdir/src/$pkgname-$pkgver
+	cd ${srcdir}/${pkgname}-${pkgver}
 
-	_PREFIX=$startdir/pkg
+	_PREFIX=${pkgdir}
 	_TCLSH="/usr/bin/tclsh"
         if [ ! -x $_TCLSH ]
 	then
@@ -32,8 +32,8 @@ build(){
 					     -no-examples -no-html \
 					     -no-wait  -no-gui 
         fi
-	mkdir -p $startdir/pkg/usr/share/licenses/$pkgname/
-	cp $startdir/src/$pkgname-$pkgver/license.terms \
-	$startdir/pkg/usr/share/licenses/$pkgname/COPYING
+	mkdir -p ${pkgdir}/usr/share/licenses/${pkgname}/
+	cp ${srcdir}/${pkgname}-${pkgver}/license.terms \
+	${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
 md5sums=('53a4669f80d579124a93200825c4c2e8')
