--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer: Vesa Kaihlavirta <vegai@iki.fi>
 pkgname=pwsafe
 pkgver=0.2.0
-pkgrel=4
+pkgrel=5
 pkgdesc="A commandline program for managing encrypted password databases"
 arch=('i686' 'x86_64')
 url="http://nsd.dyndns.org/pwsafe/"
 license=('GPL')
 depends=('openssl' 'libxmu' 'readline')
-source=($url/releases/$pkgname-$pkgver.tar.gz)
+source=($url/releases/${pkgname}-${pkgver}.tar.gz)
 md5sums=('4bb36538a2772ecbf1a542bc7d4746c0')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
+  cd ${srcdir}/${pkgname}-${pkgver}
+  ./configure --prefix=/usr --mandir=/usr/share/man
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=${pkgdir} install
 
   # Make pwsafe suid root so it can seed rng as a user
-  chmod +s $startdir/pkg/usr/bin/pwsafe
+  chmod +s ${pkgdir}/usr/bin/pwsafe
 }
