--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,21 +1,27 @@
 # $Id$
 # Contributer: Benjamin Andresen <benny@klapmuetz.org>
-# Maintainer: Thomas Baechler <thomas.baechler@rwth-aachen.de>
+# Contributor: Thomas Baechler <thomas.baechler@rwth-aachen.de>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+
 pkgname=bin2iso
 pkgver=1.9b
-_dlver=$(echo $pkgver | sed 's/\.//')
+_dlver=$(echo ${pkgver} | sed 's/\.//')
 pkgrel=1
 pkgdesc="bin2iso converts RAW format (.bin/.cue) files to ISO/WAV format"
 arch=('i686' 'x86_64')
 url="http://users.eastlink.ca/~doiron/bin2iso/"
-source=(http://users.eastlink.ca/~doiron/${pkgname}/linux/${pkgname}${_dlver}_linux.c)
 license=('GPL')
 depends=('glibc')
+source=(http://users.eastlink.ca/~doiron/${pkgname}/linux/${pkgname}${_dlver}_linux.c)
 md5sums=('01dab72496175a772bcf6e08c854d440')
 
 build() {
-  cd $startdir/src
-  [ -z "$CC" ] && CC=gcc
-  $CC $CFLAGS -Wall -o ${pkgname} ${pkgname}${_dlver}_linux.c || return 1
-  install -D -m 755 $pkgname $startdir/pkg/usr/bin/$pkgname
+	/bin/true
+}
+
+package() {
+	cd ${srcdir}
+	[ -z "$CC" ] && CC=gcc
+	$CC $CFLAGS -Wall -o ${pkgname} ${pkgname}${_dlver}_linux.c || return 1
+	install -D -m 755 ${pkgname} ${pkgdir}/usr/bin/${pkgname}
 }
