--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=torcs
 pkgver=1.3.1
-pkgrel=4
+pkgrel=4.1
 pkgdesc="A 3D racing cars simulator using OpenGL"
 url="http://torcs.sourceforge.net"
 license=("GPL")
@@ -23,9 +23,9 @@ md5sums=('f3efd94fb52e9963e176bf441cdab7b3'
 build() {
   cd $startdir/src/$pkgname-$pkgver
 
-  (cd src && patch -p1 <../../torcs-gcc.patch)
+#  (cd src && patch -p1 <../../torcs-gcc.patch)
 
-  ./configure --prefix=/opt/torcs --x-includes=/usr/include --x-libraries=/usr/lib
+#  ./configure --prefix=/opt/torcs --x-includes=/usr/include --x-libraries=/usr/lib
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
