--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,10 @@
 # $Id$
 # Contributor: Sergej Pupykin <ps@lx-ltd.ru>
-arch=('any')
+
 pkgname=arch-backup
 pkgver=0.8.7
-pkgrel=1
+pkgrel=2
+arch=('any')
 pkgdesc="trivial backup scripts (ssh/smb support)"
 url="http://code.google.com/p/archlinux-stuff/"
 license=("GPL")
@@ -13,24 +14,25 @@ source=(http://archlinux-stuff.googlecode.com/files/arch-backup-$pkgver.tar.gz)
 md5sums=('bb0a7ea36b0a19f43fcceeb93c996afc')
 
 build() {
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/arch-backup.conf \
-		     $startdir/pkg/etc/arch-backup/arch-backup.conf && \
-  install -D -m 0755 $startdir/src/arch-backup-$pkgver/arch-backup.sh \
-		     $startdir/pkg/usr/bin/arch-backup && \
-  install -D -m 0755 $startdir/src/arch-backup-$pkgver/ssh-backup.sh \
-		     $startdir/pkg/usr/lib/arch-backup/ssh && \
-  install -D -m 0755 $startdir/src/arch-backup-$pkgver/smb-backup.sh \
-		     $startdir/pkg/usr/lib/arch-backup/smb && \
-  install -D -m 0755 $startdir/src/arch-backup-$pkgver/local-backup.sh \
-		     $startdir/pkg/usr/lib/arch-backup/local && \
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/common.inc \
-		     $startdir/pkg/usr/lib/arch-backup/common.inc && \
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/local-example.conf \
-		     $startdir/pkg/etc/arch-backup/_local-example && \
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/ssh-example.conf \
-		     $startdir/pkg/etc/arch-backup/_ssh-example && \
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/smb-example.conf \
-		     $startdir/pkg/etc/arch-backup/_smb-example
-  install -D -m 0644 $startdir/src/arch-backup-$pkgver/arch-backup.8 \
-		     $startdir/pkg/usr/share/man/man8/arch-backup.8
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/arch-backup.conf \
+		     $pkgdir/etc/arch-backup/arch-backup.conf && \
+  install -D -m 0755 $srcdir/arch-backup-$pkgver/arch-backup.sh \
+		     $pkgdir/usr/bin/arch-backup && \
+  install -D -m 0755 $srcdir/arch-backup-$pkgver/ssh-backup.sh \
+		     $pkgdir/usr/lib/arch-backup/ssh && \
+  install -D -m 0755 $srcdir/arch-backup-$pkgver/smb-backup.sh \
+		     $pkgdir/usr/lib/arch-backup/smb && \
+  install -D -m 0755 $srcdir/arch-backup-$pkgver/local-backup.sh \
+		     $pkgdir/usr/lib/arch-backup/local && \
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/common.inc \
+		     $pkgdir/usr/lib/arch-backup/common.inc && \
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/local-example.conf \
+		     $pkgdir/etc/arch-backup/_local-example && \
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/ssh-example.conf \
+		     $pkgdir/etc/arch-backup/_ssh-example && \
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/smb-example.conf \
+		     $pkgdir/etc/arch-backup/_smb-example
+  install -D -m 0644 $srcdir/arch-backup-$pkgver/arch-backup.8 \
+		     $pkgdir/usr/share/man/man8/arch-backup.8
 }
+
