upgpkg: lib32-glibc 2.11.1-1.1 rebuild due to FS#18267
git-svn-id: file:///srv/repos/svn-community/svn@11601 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,14 +6,14 @@
 _pkgsourcename=glibc
 pkgname=lib32-$_pkgsourcename
 pkgver=2.11.1
-pkgrel=1
+pkgrel=1.1
 arch=('x86_64')
 groups=('lib32')
 pkgdesc="GNU C Library (32 Bit)"
 url="http://www.gnu.org/software/libc"
 license=('GPL' 'LGPL')
 install=$pkgname.install
-source=(http://mir.archlinux.fr/core/os/i686/$_pkgsourcename-$pkgver-$pkgrel-i686.pkg.tar.gz)
+source=(http://mir.archlinux.fr/core/os/i686/$_pkgsourcename-$pkgver-1-i686.pkg.tar.gz)
 
 build() {
 	cd $srcdir
@@ -30,5 +30,9 @@ build() {
 
 	mkdir -p $pkgdir/lib
 	ln -s /opt/lib32/lib/ld-linux.so.2 $pkgdir/lib/ld-linux-x86-32.so.2
+
+	install -d -m755 ${pkgdir}/etc/ld.so.conf.d/
+	echo '/opt/lib32/lib' > ${pkgdir}/etc/ld.so.conf.d/lib32-glibc.conf
+	echo '/opt/lib32/usr/lib' >> ${pkgdir}/etc/ld.so.conf.d/lib32-glibc.conf
 }
 md5sums=('03cb61676312ba91790abbce9bb6cdaa')
