upgpkg: neatx 0.3.1-5 rebuild because of FS#18267
git-svn-id: file:///srv/repos/svn-community/svn@11635 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # vim:set ts=2 sw=2 et:
 pkgname=neatx
 pkgver=0.3.1
-pkgrel=4
+pkgrel=5
 pkgdesc="A free NX server by google"
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/neatx/"
@@ -25,4 +25,7 @@ build() {
   make || return 1
   make DESTDIR="$pkgdir/" install || return 1
   chmod 777 "$pkgdir/var/lib/neatx/sessions"
+
+  install -d -m755 ${pkgdir}/etc/ld.so.conf.d/
+  echo '/opt/NX/lib' > ${pkgdir}/etc/ld.so.conf.d/neatx.conf
 }
