upgpkg: pgadmin3 1.10.1-2 upd
git-svn-id: file:///srv/repos/svn-community/svn@11671 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=pgadmin3
 pkgver=1.10.1
 _realver=1.10.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A comprehensive design and management interface for PostgreSQL database"
 arch=('i686' 'x86_64')
 url="http://www.pgadmin.org"
@@ -20,7 +20,7 @@ md5sums=('baeec7dfcff6ec1447f6097f11c443e0'
 build() {
     cd $srcdir/pgadmin3-${_realver}
 
-    ./configure --prefix=/usr
+    [ $NOEXTRACT -eq 1 ] || ./configure --prefix=/usr
     make || return 1
     make DESTDIR=$pkgdir/ install || return 1
 
