upgpkg: sdlmame 0.136u3-1 upd
git-svn-id: file:///srv/repos/svn-community/svn@11757 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: JJDaNiMoTh <jjdanimoth@gmail.com>
 
 pkgname=sdlmame
-pkgver=0.136u2
+pkgver=0.136u3
 _basever=0136
 pkgrel=1
 pkgdesc="A port of the popular Multiple Arcade Machine Emulator using SDL with OpenGL support."
@@ -18,11 +18,13 @@ install=sdlmame.install
 source=("mame${_basever}s.zip::http://mamedev.org/downloader.php?&file=mame${_basever}s.zip"
 	"http://mamedev.org/updates/0136u1_diff.zip"
 	"http://mamedev.org/updates/0136u2_diff.zip"
+	"http://mamedev.org/updates/0136u3_diff.zip"
 	"sdlmame.sh"
 	"extras.tar.gz")
 md5sums=('9ff9f3a475e3933bf3ad1f55f42bff88'
          '1163f4cd10779aaeae4f2b6e9fc06f19'
          'befe2cf9c79ec1819661141cf817a89e'
+         '5efb06a67ab0e743b9cfae9f6ab4da01'
          '3119ccfa1e970eba4467df31208adaf0'
          '420b61240bf5ae11615ba7c6100ee00d')
 
@@ -34,6 +36,7 @@ build() {
     find . -type f -not -name uismall.png | xargs perl -pi -e 's/\r\n?/\n/g'
     patch -p0 -E <0136u1.diff
     patch -p0 -E <0136u2.diff
+    patch -p0 -E <0136u3.diff
     sed -i 's/-Werror//' makefile || return 1
   fi
 
