git-svn-id: file:///srv/repos/svn-community/svn@11779 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=sdlmame
 pkgver=0.136u3
 _basever=0136
-pkgrel=1
+pkgrel=2
 pkgdesc="A port of the popular Multiple Arcade Machine Emulator using SDL with OpenGL support."
 url="http://mamedev.org/"
 license=('custom:MAME License')
@@ -13,7 +13,7 @@ arch=('i686' 'x86_64')
 depends=('sdl>=1.2.11' 'libxinerama' 'gconf')
 makedepends=('unzip' 'nasm' 'mesa')
 DLAGENTS=('http::/usr/bin/wget -U "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1.2) Gecko/20090804 Shiretoko/3.5.2" -c -t 3 --waitretry=3')
-options=('!makeflags' 'force')
+options=('force')
 install=sdlmame.install
 source=("mame${_basever}s.zip::http://mamedev.org/downloader.php?&file=mame${_basever}s.zip"
 	"http://mamedev.org/updates/0136u1_diff.zip"
@@ -63,15 +63,16 @@ build() {
 
   install -m755 chdman $pkgdir/usr/share/${pkgname}/chdman && \
   install -m755 jedutil $pkgdir/usr/share/${pkgname}/jedutil && \
-#  install -m755 makemeta $pkgdir/usr/share/${pkgname}/makemeta && \
   install -m755 regrep $pkgdir/usr/share/${pkgname}/regrep && \
   install -m755 romcmp $pkgdir/usr/share/${pkgname}/romcmp && \
-#  install -m755 runtest $pkgdir/usr/share/${pkgname}/runtest && \
   install -m755 testkeys $pkgdir/usr/share/${pkgname}/testkeys && \
   install -m755 src2html $pkgdir/usr/share/${pkgname}/src2html && \
   install -m755 srcclean $pkgdir/usr/share/${pkgname}/srcclean && \
   install -m755 ldverify $pkgdir/usr/share/${pkgname}/ldverify && \
   install -m755 ldresample $pkgdir/usr/share/${pkgname}/ldresample || return 1
+
+#  install -m755 makemeta $pkgdir/usr/share/${pkgname}/makemeta && \
+#  install -m755 runtest $pkgdir/usr/share/${pkgname}/runtest && \
 #  install -m644 ui.bdf $pkgdir/usr/share/${pkgname}/ui.bdf || return 1
 
   # Install the extra bits
@@ -81,6 +82,7 @@ build() {
   install -m644 src/osd/sdl/keymaps/* $pkgdir/usr/share/${pkgname}/keymaps/ || return 1
 
   # Include the license
-  install -Dm644 docs/license.txt $startdir/pkg/usr/share/licenses/${pkgname}/license.txt
-}
+  install -Dm644 docs/license.txt $startdir/pkg/usr/share/licenses/${pkgname}/license.txt || return 1
 
+  find $pkgdir -type f -exec strip {} \;
+}
