upgpkg: rsyslog 3.22.1-4 Rebuilt against net-snmp 5.5, Added gnutls makedepends
git-svn-id: file:///srv/repos/svn-community/svn@11873 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=rsyslog
 pkgver=3.22.1
-pkgrel=3
+pkgrel=4
 pkgdesc="An enhanced multi-threaded syslogd with a focus on security and reliability"
 url="http://www.rsyslog.com/"
 arch=('i686' 'x86_64')
 license=('GPL3')
 depends=('zlib')
-makedepends=('postgresql-libs>=8.4.1' 'libmysqlclient' 'net-snmp')
+makedepends=('postgresql-libs>=8.4.1' 'libmysqlclient' 'net-snmp' 'gnutls')
 optdepends=('postgresql-libs: PostgreSQL Database Support'
             'libmysqlclient: MySQL Database Support')
 backup=('etc/rsyslog.conf' \
