--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Krzysiek Wojszko <w.krzysiek@gmail.com>
 
 pkgname=auctex
-pkgver=11.85
-pkgrel=2
+pkgver=11.86
+pkgrel=1
 pkgdesc="An extensible package for writing and formatting TeX files in Emacs"
 arch=('any') 
 url="http://www.gnu.org/software/auctex/"
 license=('GPL3')
-depends=('emacs' 'ghostscript' 'texlive-core' 'texinfo')
+depends=('emacs' 'ghostscript' 'texlive-core')
 install=auctex.install
 source=(http://ftp.gnu.org/pub/gnu/auctex/${pkgname}-${pkgver}.tar.gz)
-md5sums=('597c2adbee11877fe1f9b57baf0ba165')
-sha1sums=('5b4ab3fbbe784f43118e52cc31b93a183f84d89f')
+md5sums=('6bc33a67b6ac59db1aa238f3693b36d2')
+sha1sums=('af3dd156f8b2db7764c86d9f7de8abd5811d888a')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
