upgpkg: luxrender 0.6.1-3 boost rebuild
git-svn-id: file:///srv/repos/svn-community/svn@11955 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,12 +5,12 @@ pkgname=luxrender
 pkgver=0.6.1
 _pkgver=36533b0843bd
 _luxblend=4b8109987265
-pkgrel=2
+pkgrel=3
 pkgdesc="Rendering system for physically correct, unbiased image synthesis"
 arch=('i686' 'x86_64')
 url="http://www.luxrender.net/"
 license=('GPL')
-depends=('openexr' 'libgl' 'boost' 'libtiff' 'libpng')
+depends=('openexr' 'libgl' 'boost>=1.42.0' 'libtiff' 'libpng')
 optdepends=('wxgtk')
 makedepends=('cmake' 'wxgtk')
 install='lux.install'
