--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,18 +4,18 @@
 
 pkgname=sk1
 pkgver=0.9.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Fork of skencil with improved CMYK support"
 arch=(i686 x86_64)
 url="http://sk1project.org/modules.php?name=Products&product=sk1"
 depends=('tcl>=7.6' 'tk>=4.2' 'python-lcms' 'pil>=1.0' 'pyxml' 'zenity')
 license=('GPL' 'LGPL')
-source=(http://sk1project.org/downloads/sk1/$pkgver\pre_rev730/sk1-$pkgver\pre_rev730.tar.gz \
-	dialog.patch \
-	sk1.desktop)
-md5sums=('723dbc0ef9b5426a8e9d4b132421c838'
-         '38b53bf8a02fcdc82577ca63f04a1555'
-         'bbf6f10b8155838eede93b5abed724f5')
+source=(http://sk1project.org/downloads/sk1/${pkgver}pre_rev905/sK1-${pkgver}pre_rev905.tar.gz \
+	sk1.desktop
+	build-fix.patch)
+md5sums=('43b82fd85049b078dcf98e9dd81fdc6a'
+         'bbf6f10b8155838eede93b5abed724f5'
+         'de144f0193cf1cd61771ce7bc782dba2')
 
 build() {
   local _tclver=`pacman -Q tcl`
@@ -23,6 +23,7 @@ build() {
   local _tcldir='tcl'${tclnum}
 
   cd $srcdir/sK1-${pkgver}pre
+  patch -p1 <$srcdir/build-fix.patch
   python setup.py install --prefix=/usr --root=$pkgdir || return 1
 
   mkdir -p $pkgdir/usr/share/pixmaps && \
@@ -36,6 +37,4 @@ build() {
   mkdir $pkgdir/usr/lib/${_tcldir} && \
   cp -r $pkgdir/usr/lib/python2.6/site-packages/sk1/share/ttk-themes/Plastik \
     $pkgdir/usr/lib/${_tcldir}/Plastik || return 1
-
-#  patch -p0 $pkgdir/usr/lib/python2.6/site-packages/sk1/app/conf/configurator.py <$srcdir/dialog.patch
 }
