--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,16 +4,18 @@
 
 pkgname=sk1
 pkgver=0.9.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Fork of skencil with improved CMYK support"
 arch=(i686 x86_64)
 url="http://sk1project.org/modules.php?name=Products&product=sk1"
 depends=('tcl>=7.6' 'tk>=4.2' 'python-lcms' 'pil>=1.0' 'pyxml' 'zenity')
 license=('GPL' 'LGPL')
-source=(http://sk1project.org/downloads/sk1/${pkgver}pre_rev905/sK1-${pkgver}pre_rev905.tar.gz \
+source=(http://sk1project.org/downloads/sk1/${pkgver}pre_rev905/sK1-${pkgver}pre_rev905.tar.gz
+	http://sk1project.org/downloads/sk1/${pkgver}pre_rev905/sk1libs-${pkgver}pre_rev905.tar.gz
 	sk1.desktop
 	build-fix.patch)
 md5sums=('43b82fd85049b078dcf98e9dd81fdc6a'
+         'd67aba6dbbcfc35c6a9f360e7ed47c3c'
          'bbf6f10b8155838eede93b5abed724f5'
          'de144f0193cf1cd61771ce7bc782dba2')
 
@@ -24,6 +26,7 @@ build() {
 
   cd $srcdir/sK1-${pkgver}pre
   patch -p1 <$srcdir/build-fix.patch
+  (cd ../sk1libs-$pkgver && python setup.py install --prefix=/usr --root=$pkgdir) || return 1
   python setup.py install --prefix=/usr --root=$pkgdir || return 1
 
   mkdir -p $pkgdir/usr/share/pixmaps && \
