--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=gecko-mediaplayer
-pkgver=0.9.9
+pkgver=0.9.9.2
 pkgrel=1
 pkgdesc="Browser plugin that uses gnome-mplayer to play media in a web browser"
 arch=('i686' 'x86_64')
@@ -12,17 +12,11 @@ license=('GPL')
 depends=("gnome-mplayer=${pkgver}" 'dbus-glib')
 makedepends=('xulrunner' 'pkgconfig')
 replaces=('mplayer-plugin')
-source=(http://gecko-mediaplayer.googlecode.com/files/${pkgname}-${pkgver}.tar.gz
-	fix_configure.patch)
-md5sums=('1833c83ee2bb226914aa078165d04ddd'
-         '294d1c797001ac568fcb3e8b5e262184')
+source=(http://gecko-mediaplayer.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
+md5sums=('deb41a4bcbde2b78d548dc37b684cfbb')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
-
-	patch -Np1 -i ${srcdir}/fix_configure.patch || return 1
-
-	autoreconf -fi || retur 1
 
 	./configure --prefix=/usr --sysconfdir=/etc --without-gconf
 	make || return 1
