--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Hans Janssen <hans@janserv.xs4all.nl>
 
 pkgname=simgear
-pkgver=1.9.1
-pkgrel=3
+pkgver=2.0.0
+pkgrel=1
 pkgdesc="A set of open-source libraries designed to be used as building blocks for quickly assembling 3d simulations, games, and visualization applications."
 arch=(i686 x86_64)
 depends=('glut' 'freealut' 'plib' 'openscenegraph')
@@ -13,12 +13,12 @@ makedepends=('boost')
 license=("GPL")
 url="http://www.simgear.org"
 options=('!makeflags')
-source=(ftp://ftp.simgear.org/pub/simgear/Source/SimGear-$pkgver.tar.gz)
-md5sums=('edfdaa60518a06699a409d0eb9f1b157')
+source=(ftp://mirrors.ibiblio.org/pub/mirrors/simgear/ftp/Source/SimGear-$pkgver.tar.gz)
+md5sums=('414bea545ea1e8ce17e4aa0809159cec')
 
 build() {
   cd $startdir/src/SimGear-$pkgver
-  ./configure --prefix=/usr 
+  ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install
 }
