upgpkg: flightgear-data 2.0.0-1 upd
git-svn-id: file:///srv/repos/svn-community/svn@12136 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,14 +4,14 @@
 # Contributor: Hans Janssen <hans@janserv.xs4all.nl>
 
 pkgname=flightgear-data
-pkgver=1.9.0
+pkgver=2.0.0
 pkgrel=1
 pkgdesc="Base-Data for the opensource flight-simulator."
 arch=(i686 x86_64)
 license=(GPL)
 url="http://www.flightgear.org"
-source=(ftp://ftp.kingmont.com/flightsims/flightgear/Shared/FlightGear-data-$pkgver.tar.bz2)
-md5sums=('4a6eabe5cd9f9b4063efbc38908ab068')
+source=(http://mirrors.ibiblio.org/pub/mirrors/flightgear/ftp/Shared/FlightGear-data-$pkgver.tar.bz2)
+md5sums=('85009e54cfd0cf74fd66fdd97c23ccd0')
 
 build() {
   cd $startdir/src
