--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=flightgear-data
 pkgver=2.0.0
 pkgrel=1
 pkgdesc="Base-Data for the opensource flight-simulator."
-arch=(i686 x86_64)
+arch=(any)
 license=(GPL)
 url="http://www.flightgear.org"
 source=(http://mirrors.ibiblio.org/pub/mirrors/flightgear/ftp/Shared/FlightGear-data-$pkgver.tar.bz2)
@@ -19,4 +19,3 @@ build() {
   mv data $startdir/pkg/usr/share/FlightGear || return 1
   chown root.users $startdir/pkg/usr/share/FlightGear/data
 }
-
