--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,23 +4,23 @@
 # Contributor: dorphell <dorphell@gmx.net>
 
 pkgname=ude
-pkgver=0.2.9b
-pkgrel=3
+pkgver=0.2.10
+pkgrel=1
 pkgdesc="UDE, the Unix Desktop Environment, is a GUI desktop environment"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libjpeg' 'libxmu' 'libxpm')
 url="http://udeproject.sourceforge.net/index.shtml"
-source=(http://downloads.sourceforge.net/udeproject/$pkgname-$pkgver.tar.gz \
+source=(http://downloads.sourceforge.net/udeproject/uwm-$pkgver.tar.gz \
 	$pkgname.desktop)
-md5sums=('fbe4d9b154f6ba777a12acf35e601855'
+md5sums=('efb3392591ad976d20bd7ac6f174a5a3'
          '84f94253ea284258c4465cd76edf599f')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  mkdir -p $startdir/pkg/etc/X11/sessions
+  cd $srcdir/uwm-$pkgver
+  mkdir -p $pkgdir/etc/X11/sessions
   ./configure --prefix=/usr
   make || return 1
-  make prefix=$startdir/pkg/usr install
-  cp $startdir/$pkgname.desktop $startdir/pkg/etc/X11/sessions
+  make prefix=$pkgdir/usr install
+  cp $srcdir/$pkgname.desktop $pkgdir/etc/X11/sessions
 }
