--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=medit
-pkgver=0.9.4
-pkgrel=10
+pkgver=0.10.0
+pkgrel=1
 pkgdesc="A GTK text editor"
 arch=('i686' 'x86_64')
 url="http://mooedit.sourceforge.net"
@@ -14,14 +14,15 @@ depends=('pygtk' 'libxml2' 'pcre' 'libsm' 'python' 'gtk2' 'gcc-libs')
 makedepends=(pkgconfig perlxml intltool gcc-objc)
 install=medit.install
 source=(http://downloads.sourceforge.net/mooedit/medit-$pkgver.tar.bz2)
-md5sums=('502086d22d608232d48ef70d56ef5f84')
+md5sums=('2b0b7670919efbe1777757c43404c43c')
 
 build() {
   cd $startdir/src/medit-$pkgver
 
-  sed -i 's#getline(#xgetline(#' moo/moolua/ldebug.c moo/moolua/ldebug.h moo/moolua/lvm.c || return 1
+  #sed -i 's#getline(#xgetline(#' moo/moolua/ldebug.c moo/moolua/ldebug.h moo/moolua/lvm.c || return 1
+  #./configure --prefix=/usr --with-pygtk --with-python --with-xml
 
-  ./configure --prefix=/usr --with-pygtk --with-python --with-xml
+  cmake . -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
 
