--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,21 +4,25 @@
 
 pkgname=freemat
 pkgver=4.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A free environment for rapid engineering, scientific prototyping and data processing"
 arch=('i686' 'x86_64')
 url="http://freemat.sourceforge.net"
 license=('GPL')
-depends=('qt' 'umfpack' 'arpack' 'libmatio' 'ffcall' 'fftw' 'blas' 'lapack')
+depends=('qt' 'umfpack' 'arpack' 'libmatio' 'ffcall' 'fftw' 'blas' 'lapack' 'mesa')
 install=freemat.install
 source=(http://downloads.sourceforge.net/project/freemat/FreeMat4/FreeMat-$pkgver-Source.tar.gz
-	freemat-gcc-4.3.0.patch)
+	freemat-gcc-4.3.0.patch
+	freemat-qt46.patch)
 md5sums=('adb58b9f2c508d9ae5b6041da2f75baf'
          '3dc3848949183de2664c2cf67663c892')
 
 build() {
   cd $startdir/src/FreeMat-$pkgver.1-Source
-  patch -p1 CMakeCache.txt <<EOF
+
+  if [ $NOEXTRACT -ne 1 ]; then
+    patch -p1 <$srcdir/freemat-qt46.patch
+    patch -p1 CMakeCache.txt <<EOF
 23c23,25
 < CMAKE_CACHEFILE_DIR:INTERNAL=/home/basu/dev/branches/FreeMat4
 ---
@@ -26,7 +30,8 @@ build() {
 > USE_LLVM:BOOL=OFF
 > CMAKE_INSTALL_PREFIX:PATH=/usr
 EOF
-  cmake `pwd`
+    cmake `pwd`
+  fi
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
   sed -i "s|/FreeMat-.*/|/FreeMat-$pkgver/|g" $startdir/freemat.install && \
