upgpkg: kvpnc 0.9.5-1 upd
git-svn-id: file:///srv/repos/svn-community/svn@12407 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Danial Olsen <do@meyl.fo>
 
 pkgname=kvpnc
-pkgver=0.9.3
-pkgrel=2
+pkgver=0.9.5
+pkgrel=1
 pkgdesc="KVpnc is a KDE Desktop Environment frontend for various vpn clients"
 arch=(i686 x86_64)
 url="http://home.gna.org/kvpnc/"
@@ -13,10 +13,13 @@ depends=('kdelibs')
 makedepends=('cmake' 'automoc4')
 install=kvpnc.install
 source=(http://download.gna.org/$pkgname/$pkgname-${pkgver}-kde4.tar.bz2)
-md5sums=('48ee3accea40a1bd0726e87e75d516cc')
+md5sums=('ff6b1889fad13a120d6c389d9faeb213')
 
 build() {
   cd $srcdir/${pkgname}-${pkgver}-kde4
+
+  export LDFLAGS=-lX11
+
   cmake . -DCMAKE_INSTALL_PREFIX=/usr
   make || return 1
   make DESTDIR=$pkgdir install || return 1
