upgpkg: uzbl 2010.02.02-2 added pygtk dependency to uzbl-tabbed
git-svn-id: file:///srv/repos/svn-community/svn@12447 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
-# Maintainer : Ionut Biru <ionut@archlinux.ro>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: Dieter Plaetinck <dieter@plaetinck.be>
 pkgbase=uzbl
 pkgname=('uzbl-core' 'uzbl-browser' 'uzbl-tabbed')
 pkgver=2010.02.02
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url="http://www.uzbl.org"
 license=('GPL3')
@@ -22,7 +22,7 @@ package_uzbl-core(){
    optdepends=('socat: to interface with the socket' 'dmenu: to run some of the example scripts'
                'zenity: to run some of the example scripts'
                'python: to run some of the example scripts' 'perl: for the example formfiller'
-               'xclip: for clipboard related keybindings')
+               'xclip: for clipboard related keybindings' 'pygtk: for uzbl-tabbed')
 
    cd "$srcdir"/Dieterbe-uzbl-*
    make DESTDIR="$pkgdir" PREFIX=/usr  install-uzbl-core || return 1
@@ -36,7 +36,7 @@ package_uzbl-browser(){
 }
 package_uzbl-tabbed(){
    pkgdesc="Tabbing manager providing multiple uzbl-browser instances in 1 window"
-   depends=("uzbl-browser=$pkgver")
+   depends=("uzbl-browser=$pkgver" 'pygtk')
    cd "$srcdir"/Dieterbe-uzbl-*
    make DESTDIR="$pkgdir" PREFIX=/usr install-uzbl-tabbed || return 1
 }
