--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=atanks
 pkgver=4.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Atomic Tanks"
 url="http://atanks.sourceforge.net"
 license=('GPL')
@@ -17,6 +17,12 @@ md5sums=('451ddeb228e263ff6f90a21e8cf7783e')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+
+  #debug messages fix
+  sed -i '/lines->Display_All(TRUE)/d' src/files.cpp
+  sed -i '/Scroll Offset:/d' src/files.cpp
+  sed -i '/T offset:/d' src/files.cpp
+  #
 
   make || return 1
   make PREFIX=${pkgdir}/usr/ INSTALL="install -c" install || return 1
