--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,10 +1,12 @@
 # $Id$
-# Maintainer: Andrea Scarpino <andrea@archlinux.org>
+# Maintainer: Ray Rashif <schivmeister@gmail.com>
+# Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Geoffroy Carrier <geoffroy.carrier@koon.fr>
 # Contributor: lang2 <wenzhi.liang@gmail.com>
 
 pkgname=imdbpy
-pkgver=4.3
+_pkgname=IMDbPY
+pkgver=4.5.1
 pkgrel=1
 pkgdesc="Python bindings for imdb"
 url="http://imdbpy.sourceforge.net/"
@@ -13,16 +15,17 @@ license=('GPL')
 depends=('python')
 makedepends=('setuptools')
 optdepends=('python-lxml' 'python-sqlalchemy' 'python-sqlobject')
-source=(http://downloads.sourceforge.net/$pkgname/IMDbPY-$pkgver.tar.gz)
-md5sums=('faf32115d861dc8a8de6b584dceb488d')
+source=(http://downloads.sourceforge.net/$pkgname/$_pkgname-$pkgver.tar.gz)
 
 build(){
-  cd "$srcdir/IMDbPY-$pkgver"
+  cd "$srcdir/$_pkgname-$pkgver"
+
   python setup.py install --root="$pkgdir" || return 1
 
   # fix directories path
-  mv ${pkgdir}/usr/etc ${pkgdir}
-  install -d ${pkgdir}/usr/share
-  mv ${pkgdir}/usr/imdb ${pkgdir}/usr/share
-  mv ${pkgdir}/usr/doc ${pkgdir}/usr/share/imdb/
+  mv "$pkgdir/usr/etc" "$pkgdir"
+  install -d "$pkgdir/usr/share"
+  mv "$pkgdir/usr/imdb" "$pkgdir/usr/share"
+  mv "$pkgdir/usr/doc" "$pkgdir/usr/share/imdb/"
 }
+md5sums=('2bd76171aeacb609af5dd39ad7ac6144')
