upgpkg: imdbpy 4.5.1-1 Fix incompatible variable
git-svn-id: file:///srv/repos/svn-community/svn@12522 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: lang2 <wenzhi.liang@gmail.com>
 
 pkgname=imdbpy
-_pkgname=IMDbPY
+_realname=IMDbPY
 pkgver=4.5.1
 pkgrel=1
 pkgdesc="Python bindings for imdb"
@@ -15,10 +15,10 @@ license=('GPL')
 depends=('python')
 makedepends=('setuptools')
 optdepends=('python-lxml' 'python-sqlalchemy' 'python-sqlobject')
-source=(http://downloads.sourceforge.net/$pkgname/$_pkgname-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/$pkgname/$_realname-$pkgver.tar.gz)
 
 build(){
-  cd "$srcdir/$_pkgname-$pkgver"
+  cd "$srcdir/$_realname-$pkgver"
 
   python setup.py install --root="$pkgdir" || return 1
 
