upgpkg: gnonlin 0.10.15-1 update to 0.10.15
git-svn-id: file:///srv/repos/svn-community/svn@12742 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,18 +1,20 @@
 # $Id$
-# Maintainer: Abhishek Dasgupta <abhidg@gmail.com>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Contributor: Abhishek Dasgupta <abhidg@gmail.com>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=gnonlin
-pkgver=0.10.13
+pkgver=0.10.15
 pkgrel=1
 pkgdesc="A library for creating non-linear video editors"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://gnonlin.sourceforge.net"
-depends=('gstreamer0.10')
-makedepends=('python' 'gstreamer0.10-base-plugins' 'pkgconfig')
+depends=('gstreamer0.10>=0.10.28')
+makedepends=('python' 'gstreamer0.10-base-plugins>=0.10.28' 'pkgconfig')
 options=('!libtool')
 license=('LGPL')
 source=(http://gstreamer.freedesktop.org/src/$pkgname/$pkgname-$pkgver.tar.bz2)
+sha256sums=('60bb6c9d325f70a0a454af1a2b7c0f35137afd0261acc6bb2abfa9fbf788e0fb')
 
 build() {
     cd "$srcdir/$pkgname-$pkgver"
@@ -20,5 +22,3 @@ build() {
     make || return 1
     make DESTDIR="$pkgdir" install || return 1
 }
-
-md5sums=('424647c776e641b318f5d4ec67dc37a4')
