upgpkg: uzbl 2010.03.14-1 update to 2010.03.14
git-svn-id: file:///srv/repos/svn-community/svn@12842 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,14 +3,14 @@
 # Contributor: Dieter Plaetinck <dieter@plaetinck.be>
 pkgbase=uzbl
 pkgname=('uzbl-core' 'uzbl-browser' 'uzbl-tabbed')
-pkgver=2010.02.02
-pkgrel=2
+pkgver=2010.03.14
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.uzbl.org"
 license=('GPL3')
 makedepends=('git' 'pkgconfig' 'libwebkit>=1.1.15.4')
 source=(uzbl-$pkgver.tar.gz::http://github.com/Dieterbe/uzbl/tarball/$pkgver)
-md5sums=('70a5d47655d5ec11f68ff5b7a7bd68b5')
+sha256sums=('6bd65bcb4aeef63f7b21bd910e2fd5ba683d727f4ff20a99d73541a033c61208')
 
 build() {
     cd "$srcdir"/Dieterbe-uzbl-*
