upgpkg: vim-rails 4.2-1 update vim-rails to v4.2 release
git-svn-id: file:///srv/repos/svn-community/svn@12856 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Aaron Schaefer <aaron@elasticdog.com>
 
 pkgname=vim-rails
-pkgver=4.0
-_sourceid=11481
-pkgrel=2
+pkgver=4.2
+_sourceid=12622
+pkgrel=1
 pkgdesc='A Vim plugin for enhanced Ruby on Rails application development'
 arch=('any')
 url='http://www.vim.org/scripts/script.php?script_id=1567'
@@ -13,17 +13,19 @@ depends=('vim')
 install=vimdoc.install
 source=("http://www.vim.org/scripts/download_script.php?src_id=$_sourceid"
         'license.txt')
-md5sums=('f65859cf135def84d9ae66c8c7a6f0ed'
-         'cd49910a3dde6fe0a7e24ebe8cbf7066')
 
 build() {
-  cd $srcdir
+  cd "$srcdir"
 
   installpath="$pkgdir/usr/share/vim/vimfiles"
 
-  install -D -m644 autoload/rails.vim $installpath/autoload/rails.vim
-  install -D -m644 doc/rails.txt $installpath/doc/rails.txt
-  install -D -m644 plugin/rails.vim $installpath/plugin/rails.vim
+  install -D -m644 autoload/rails.vim "$installpath/autoload/rails.vim"
+  install -D -m644 doc/rails.txt "$installpath/doc/rails.txt"
+  install -D -m644 plugin/rails.vim "$installpath/plugin/rails.vim"
 
-  install -D -m644 license.txt $pkgdir/usr/share/licenses/$pkgname/license.txt
+  install -D -m644 license.txt "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
+md5sums=('334b454c78df98f7f17d489578479752'
+         'cd49910a3dde6fe0a7e24ebe8cbf7066')
+sha256sums=('74882e4e17ec057ec2d6a601df1005eca57ae60f519d3c546676ec2d521fd768'
+            '446c67d93c43addf076fe103a71844c2d875d478f82186436567dd221f2652f3')
