upgpkg: rss-glx 0.9.1-3 take 2 on fixing to gnome and kde
git-svn-id: file:///srv/repos/svn-community/svn@12947 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,10 +1,11 @@
 # $Id$
-# Maintainer: Corrado 'bardo' Primier <corrado.primier@mail.polimi.it>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Contributor: Corrado 'bardo' Primier <corrado.primier@mail.polimi.it>
 # Contributor: Tate "Tatey" Johnson <tatey86@tpg.com.au>
 
 pkgname=rss-glx
 pkgver=0.9.1
-pkgrel=2
+pkgrel=3
 pkgdesc="The Really Slick Screensavers port to GLX"
 arch=('i686' 'x86_64')
 url="http://rss-glx.sourceforge.net/"
@@ -14,9 +15,9 @@ optdepends=('xscreensaver: xscreensaver integration')
 install=rss-glx.install
 options=('!libtool')
 source=(http://downloads.sourceforge.net/rss-glx/${pkgname}_${pkgver}.tar.bz2
-        rss-glx-gnome.tar.bz2)
+        rss-glx-desktops.tar.bz2)
 md5sums=('a772bd143cd8d141edf4d9eff9860ab3'
-         'b63086a5e15c175d89c0265965e66265')
+         '86e9216a5c7028e5186e41ec4c0b01f0')
 
 build() {
   cd ${srcdir}/${pkgname}_${pkgver}
@@ -40,7 +41,7 @@ build() {
   done
 
   install -d ${pkgdir}/usr/share/applications/screensavers
-  install -m644 ${srcdir}/${pkgname}-gnome/*.desktop ${pkgdir}/usr/share/applications/screensavers
+  install -m644 ${srcdir}/${pkgname}-desktops/*.desktop ${pkgdir}/usr/share/applications/screensavers
 }
 
 # vim:set ts=2 sw=2 et:
