--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=freemat
 pkgver=4.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A free environment for rapid engineering, scientific prototyping and data processing"
 arch=('i686' 'x86_64')
 url="http://freemat.sourceforge.net"
 license=('GPL')
-depends=('qt' 'umfpack' 'arpack' 'libmatio' 'ffcall' 'fftw' 'blas' 'lapack' 'mesa')
+depends=('qt' 'umfpack' 'arpack' 'libmatio' 'ffcall' 'fftw' 'blas' 'lapack' 'mesa' 'portaudio')
 install=freemat.install
 source=(http://downloads.sourceforge.net/project/freemat/FreeMat4/FreeMat-$pkgver-Source.tar.gz
 	freemat-gcc-4.3.0.patch
