bugfix version bump from 0.0.9.3 to 0.0.9.4 (upstream), libdjvu dep
git-svn-id: file:///srv/repos/svn-community/svn@13750 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Stefan Husmann <stefan-husmann@t-online.de>
 # Contributor: tocer.deng <tocer.deng@gmail.com>
 pkgname=apvlv
-pkgver=0.0.9.3
+pkgver=0.0.9.4
 pkgrel=1
 pkgdesc="A PDF Viewer which behaves like Vim"
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/apvlv/"
 license=('GPL')
-depends=('poppler-glib')
+depends=('poppler-glib' 'libdjvu')
 source=(http://apvlv.googlecode.com/files/$pkgname-${pkgver}.tar.gz)
-md5sums=('ac063a81ee65dbada8f76e2f3bf9cbac')
+md5sums=('be61b4a80c0628143bf82aac676c39ae')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
